<resources>
        <string name="app_name">Fate of Ball</string>

        <string name="action_settings">Settings</string>
        <string name="action_about">About</string>
        <string name="about_text">This Magic 8-ball answer you when\n
        you turn the device upside down and\n
        wait until it vibrates. After you can\n
        turn the device in normal position.\n
        Enjoy!</string>

    <string-array name="responses">
        <item>It is\n certain</item>
        <item>It is\n decidedly so</item>
        <item>Without a \n doubt</item>
        <item>Yes definitely</item>
        <item>You may rely\n on it</item>
        <item>As I see it,\n yes</item>
        <item>Most likely</item>
        <item>Outlook good</item>
        <item>Yes</item>
        <item>Signs point\n to yes</item>
            <item>Reply hazy\n try again</item>
        <item>Ask again later</item>
        <item>Better not tell\n you now</item>
        <item>Cannot predict\n now</item>
        <item>Concentrate and\n ask again</item>
        <item>Don\'t count\n on it</item>
        <item>My reply is\n no</item>
        <item>My sources say\n no</item>
        <item>Outlook not\n so good</item>
        <item>Very doubtful</item>
    </string-array>
    <string name="item_demo">Concentrate and\n ask again</string>
    <string name="ball_power_label">Ball charge for today:</string>
    <string name="ps_vibro_set">Vibration settings</string>
    <string name="ps_vibro_off">Turn off vibration</string>
    <string name="ps_vibro_dur">Vibration duration</string>
    <string name="ps_sound_set">Sound settings</string>
    <string name="ps_sound_off">Turn off the sound</string>
    <string name="ps_additionaaly">Additionally</string>
    <string name="ps_no_ads">Remove ads</string>
    <string name="ps_by_vip">Buy privileges</string>
    <string name="ps_sw_vibro" translatable="false">key_ps_sw_vibro</string>
    <string name="ps_ls_vibro" translatable="false">key_ps_ls_vibro</string>
    <string name="ps_sw_sound" translatable="false">key_ps_sw_sound</string>
    <string name="ps_sw_ads" translatable="false">key_ps_sw_ads</string>
    <string name="ps_sw_vip" translatable="false">key_ps_sw_vip</string>

</resources>